# python-package-starter

./: README.md  cleanup.sh  pyproject.toml
.github/workflows/: ci.yaml  cleanup.yaml  release.yaml
python_package_starter/: fizzbugzz.py
tests/: test_fizzbuzz.py
