[tool.poetry]
name = "python-package-starter"
version = "2.0.2"
description = "python-package-starter"
authors = ["ablil <ablil@proton.me>"]
maintainers = ["ablil <ablil@proton.me>"]
readme = "README.md"
repository = "https://github.com/ablil/python-package-starter"
keywords = []

[project]
license = { file = "LICENSE" }

[project.urls]
"Bug Tracker" = "https://github.com/ablil/python-package-starter/issues"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
black = ">=24.8,<26.0"
pre-commit = ">=3.8,<5.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# see https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-via-a-file
[tool.black]
line-length = 120
