[project]
name = "python-package-starter"
version = "2.0.2"
description = "python-package-starter"
authors = [
    {name = "ablil", email = "ablil@proton.me"}
]
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "requests"
]

[project.urls]
"Bug Tracker" = "https://github.com/ablil/python-package-starter/issues"
repository = "https://github.com/ablil/python-package-starter"

[tool.poetry.group.dev.dependencies]
black = ">=24.8,<26.0"
pre-commit = ">=3.8,<5.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"

# see https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-via-a-file
[tool.black]
line-length = 100


[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
